--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tournament</title>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<h1>Select your Fighter</h1>
+
+
 <body>
+   <div class="d-flex align-items-center justify-content-center gap-3">
+    
+    <img src="Mortal.PNG" alt="MK Logo" class="img-fluid" style="width: 60px;">
+
+    <h1 class="fw-bold" style="color: #d4af37;">
+        Select your Fighter
+    </h1>
+
+</div>
+
+  <div class="card-body">
+                        <form id="nameForm">
+                            <div class="mb-4">
+                                <label for="name" class="form-label">Name of your fighter</label>
+                                <input type="text" class="form-control"  name="name"
+                                       placeholder="Digit your fighter's name" required>
+<div class="card-body">
+                        <form id="powerForm">
+                            <div class="mb-4">
+                                <label for="power" class="form-label">Power of your fighter</label>
+                                <input type="text" class="form-control"  name="power"
+                                       placeholder="Digit your fighter's power" required>
+
+                                         <div class="mb-4">
+                                <label for="Reign" class="form-label">Realm of Origin</label>
+                                <select class="form-control" id="realm" required>
+                                    <option value="">Select your Realm</option>
+                                    <option value="Earthrealm">Earthrealm</option>
+                                    <option value="ChaosRealm">ChaosRealm</option>
+                                    <option value="Netherrealm">Netherrealm</option>
+                                    <option value="Outworld">Outworld</option>
+                                    <option value="OrderRealm">OrderRealm</option>
+                                    <option value="Edenia">Edenia</option>
+
+                                </select>
+                            </div>
+                               <div class="d-grid gap-2">
+                                <button type="submit" class="btn btn-primary btn-lg">Choose Fighter</button>
+                            </div>
     
 </body>
 </html>
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
