--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
         </div>
 
         <div class="d-grid gap-2">
-            <button type="submit" class="btn btn-primary btn-lg">
+            <button onclick="lista()" class="btn btn-primary btn-lg">
                 Choose Fighter
             </button>
+        </div>
+
+        <div>
+            <ul id="lista" class="mt-4"></ul>
         </div>
 
     </form>
