refactor: rename functions and variables to English

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         </div>
 
         <div class="d-grid gap-2">
-            <button onclick="lista()" class="btn btn-primary btn-lg">
+            <button onclick="addToList()" class="btn btn-primary btn-lg">
                 Choose Fighter
             </button>
         </div>
 
         <div>
-            <ul id="lista" class="mt-4"></ul>
+            <ul id="list" class="mt-4"></ul>
         </div>
 
     </form>
