feat:Added music function.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 
         <ul id="list" class="mt-4"></ul>
 
+        <button id="musicBtn">▶️ Tocar música</button>
+
+        <audio id="bgMusic" loop>
+         <source src="audio/mk-theme.mpeg" type="audio/mpeg">
+        </audio>
+
     </form>
 
 </div>
